Updated to OSGi R7 API - cosmetic changes